# fly-in

./: .gitignore  Makefile  README.md  gui.py  main.py  model.py  parser.py  pathfinding.py  pyproject.toml  run_tests.py  simulation.py  visual.py
.claude/: settings.local.json
memory/: MEMORY.md  feedback_flake8_line_length.md
tests/: test_main.py  test_parser.py  test_simulation.py
