# Tool config and project metadata. Install uses requirements-dev.txt (see Makefile).
# [tool.mypy] is read by mypy for lint. flake8 uses .flake8.

[project]
name = "fly-in"
version = "0.1.0"
description = "Drone routing system — navigate multiple drones through connected zones."
readme = "README.md"
requires-python = ">=3.10"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
